data/derived/comb/progs/unify/prog5789.ml.out
Characters 177-179:
  let args = l1 (tenEx 0 l2) in
             ^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
